Fixes button alignment issue in voyages#new caused by makeshift buttons.

--- a/app/assets/stylesheets/users_edit.scss
+++ b/app/assets/stylesheets/users_edit.scss
@@ -23,7 +23,6 @@
     filter: alpha(opacity=0);
     opacity: 0.9;
     outline: none;
-    background: #FFF;
     cursor: inherit;
     display: block;
       // width: 35%;
